@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Nov 2013; Martin Väth <martin@mvath.de>:
+  Remove IUSE=clang
+
   14 Sep 2013; Martin Väth <martin@mvath.de>:
   Bump to git-r3.eclass
 
